src/test/ui/directory_ownership/non-inline-mod-restriction.stderr
error: Cannot declare a non-inline module inside a block unless it has a path attribute
  --> $DIR/non-inline-mod-restriction.rs:4:9
   |
LL |     mod foo;
   |         ^^^

error: aborting due to previous error

